[libgraal] assert(failure_reason != 0LL) failed: must specify failure_reason

XMLWordPrintable

    • generic
    • generic

      During testing of JDK-8218847 changes I found few failures. This is one of them:

      With " -XX:+UnlockExperimentalVMOptions -XX:+EnableJVMCI -XX:+TieredCompilation -XX:+UseJVMCICompiler -Djvmci.Compiler=graal" flags
      test/hotspot/jtreg/compiler/uncommontrap/DeoptReallocFailure.java hit assert:

      # Internal Error (src/hotspot/share/compiler/compileBroker.cpp:2084), pid=41624, tid=47068
      # assert(failure_reason != 0LL) failed: must specify failure_reason

            Assignee:
            Vladimir Kozlov
            Reporter:
            Vladimir Kozlov
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: