8218927: [libgraal] assert(failure_reason != 0LL) failed: must specify failure_reason